[package]
name = "twitter-tool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = { version = "0.26.0", features = ["event-stream"] }
ctrlc = "3.2.5"
dotenvy = "0.15.6"
futures-util = "0.3.26"
governor = "0.5.1"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
itertools = "0.10.5"
nonzero_ext = "0.3.0"
oauth2 = "4.3.0"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
unicode-segmentation = "1.10.1"
unicode-truncate = "0.2.0"
url = "2.3.1"
